# chimera-py

./: README.md  chimera.py  flake.nix  justfile  pyproject.toml
.helix/: languages.toml
example/: main.chi  main.xi  test.chi  test2.chi
src/chimerix/: __init__.py  context_builder.py  core.py  impls__.py  lazy_value.py  lib.py  node__.py  parser.py  tree_sitter_map.py  ts_helpers.py  value.py  vit_nodes.py  wasm.py
