[project]
name = "chimerix"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ilya Cherezov", email = "cherezov.ia@phystech.edu" }
]
requires-python = ">=3.13"
dependencies = [
    "pygls>=2.0.1",
    "rich>=14.3.2",  # pretty debug dataclasses
    "tree-sitter>=0.25.2",
    "tree-sitter-chimera",
]

[build-system]
requires = ["uv_build>=0.8.2,<0.9.0"]
build-backend = "uv_build"

[tool.uv.sources]
tree-sitter-chimera = { git = "https://github.com/l1onsun/tree-sitter-chimera" }
